--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="headerright">
       <a href="index-h.html">Home</a>
       <a href="about-us.html">About Us</a>
-      <a href="http://127.0.0.1:5500/index.html">Breeds and Rearing</a>
+      <a href="breeds.html">Breeds and Rearing</a>
       <a class="active" href="index.html">Marketing Advice</a>
       <a href="contact.html">Contact Us</a>
     </div>
@@ -86,7 +86,7 @@
     <div class="footerright">
       <a href="index-h.html">Home</a>
       <a href="about-us.html">About Us</a>
-      <a href="#">Breeds and Rearing</a>
+      <a href="breeds.html">Breeds and Rearing</a>
       <a class="active" href="index.html">Marketing Advice</a>
       <a href="contact.html">Contact Us</a>
     </div>
