--- a/contact.html
+++ b/contact.html
@@ -13,9 +13,9 @@
     <div class="headerright">
       <a href="index-h.html">Home</a>
       <a href="about-us.html">About Us</a>
-      <a href="http://127.0.0.1:5500/index.html">Breeds and Rearing</a>
+      <a href="breeds.html">Breeds and Rearing</a>
       <a href="index.html">Marketing Advice</a>
-      <a class="active"href="index-c.html">Contact Us</a>
+      <a class="active"href="contact.html">Contact Us</a>
     </div>
 </div>
   <div class="contact">
@@ -49,7 +49,7 @@
     <div class="footerright">
       <a href="index-h.html">Home</a>
       <a href="about-us.html">About Us</a>
-      <a href="http://127.0.0.1:5500/index.html">Breeds and Rearing</a>
+      <a href="breeds.html">Breeds and Rearing</a>
       <a href="index.html">Marketing Advice</a>
       <a class="active" href="contact.html">Contact Us</a>
     </div>
