--- a/breeds.html
+++ b/breeds.html
@@ -36,7 +36,7 @@
            <p>Plymouth-Rocks are very respectable layers of the large brown eggs. They average around 200 eggs per year which equates to roughly 4 eggs per week.</p>
        </div>
        <div class="center">
-           <img src="./images/Plymouth-Rock-Roaming-150x150.jpg" alt="">
+           <img src="p.jpg" alt="">
        </div>
    </div>
    <div class="container1">
@@ -49,7 +49,7 @@
             <p>The Leghorn is a sirm favorite of the industrial poultry concerns. She will lay anywhere from 280-320 eggs per year. This equates to 4+ eggs per week.</p>
         </div>
        <div class="center">
-           <img src="./images/White-Leghorn-Chickens.jpg" alt="">
+           <img src="white.jpg" alt="">
        </div>
    </div>
    <div class="container2">
@@ -62,7 +62,7 @@
            <p>The Rhode Island is very good at laying eggs. It is hard to surpass them in output and continuity. A good hen can lay 200-300 eggs per year. This translates to 4+ eggs in a week.</p>
        </div>
        <div class="center">
-           <img src="./images/RhodeIslandRed jpg.jpg" alt="">
+           <img src="red.jpg" alt="">
        </div>
    </div>
    <button type="button" id="read" onclick="read()">learn More</button>
