--- a/breeds.html
+++ b/breeds.html
@@ -8,20 +8,16 @@
     <title>MASTER MINDS POULTRY FARMING</title>
 </head>
 <body>
-   <div class="header">
-       <a href="#" class="logo">Master Minds Poultry</a>
-   </div> 
-
-   <nav>
-    <ul>
-        <li><a href="index-h.html">Home</a></li>
-        <li><a href="about-us.html">About Us</a></li>
-        <a class="active" href="breeds.html">Breeds and Rearing</a>
-        <li><a href="index.html">Marketing Plan</a></li>
-        <li><a href="contact.html">Contact Us</a></li>
-    </ul>
-   </nav>
-
+    <div class="header">
+        <a href="#default" class="logo">MasterMind Poultry Farming</a>
+        <div class="headerright">
+          <a href="index-h.html">Home</a>
+          <a href="about-us.html">About Us</a>
+          <a class="active"href="breeds.html">Breeds and Rearing</a>
+          <a href="index.html">Marketing Advice</a>
+          <a href="contact.html">Contact Us</a>
+        </div>
+    </div>
    <div class="learn_more">
        <h2>Learn More On Chicken Breeds and their Production</h2>
    </div>
