--- a/index-h.html
+++ b/index-h.html
@@ -11,21 +11,19 @@
     <div id="container">
     <body class="image">
         <div class="homep">
-            <a class="active" href="index-h.html"></a>
-                
-                <nav id="master">MasterMind <br>Problem solver</nav>
-                <nav id="bar">
-                <ul>
-                     <li><a href="index-h.html">Home</a></li>                    
-                    <a href="about-us.html">About Us</a></li>
-                    <li><a href="breeds.html">Breeds</a></li>
-                    <li></p><a href="index.html">Marketing</a></li>
-                    <li><a href="contact.html">Contacts</a></li>
-                </ul>
-                </nav>
+            <div class="header">
+                <a href="#default" class="logo">MasterMind Poultry Farming</a>
+                <div class="headerright">
+                  <a class="active"href="index-h.html">Home</a>
+                  <a href="about-us.html">About Us</a>
+                  <a href="breeds.html">Breeds and Rearing</a>
+                  <a href="index.html">Marketing Advice</a>
+                  <a href="contact.html">Contact Us</a>
+                </div>
+            </div>
             </div>
             <div id="overview">
-                    <h2>Welcome to MasterMind poultry site, Dont panic again all problems are sorted here!!.</h2>
+                    <h2>Welcome to MasterMind poultry site.</h2><h2>Dont panic again all problems are sorted here!</h2>
             </div>
         </div>
         <div id="welcome">
