--- a/about-us.html
+++ b/about-us.html
@@ -8,18 +8,16 @@
     <title>About Us</title>
 </head>
 <body>
-    <div id="about">
-        <a class="active" href="about-us.html"></a>
-        <nav id="master">MasterMind <br>Problem solver</nav>
-        <nav id="bar">
-            <ul>
-                <li><a href="index-h.html">Home</a></li>                    
-                <li><a href="about-us.html">About Us</a></li>
-                <li><a href="breeds.html">Breeds</a></li>
-                <li></p><a href="index.html">Marketing</a></li>
-                <li><a href="contacts.html">Contacts</a></li>
-            </ul>
-        </nav>
+    <div class="header">
+        <a href="#default" class="logo">MasterMind Poultry Farming</a>
+        <div class="headerright">
+          <a href="index-h.html">Home</a>
+          <a class="active"href="about-us.html">About Us</a>
+          <a href="breeds.html">Breeds and Rearing</a>
+          <a href="index.html">Marketing Advice</a>
+          <a href="contact.html">Contact Us</a>
+        </div>
+    </div>
         <p id="aboutp">Enabling steady poultry, <br>Fulfiling farmers dreams...</p>
     </div>
     <div id="title">
