--- a/about-us.html
+++ b/about-us.html
@@ -11,7 +11,7 @@
     <div class="header">
         <a href="#default" class="logo">MasterMind Poultry Farming</a>
         <div class="headerright">
-          <a href="index-h.html">Home</a>
+          <a href="home.html">Home</a>
           <a class="active"href="about-us.html">About Us</a>
           <a href="breeds.html">Breeds and Rearing</a>
           <a href="index.html">Marketing Advice</a>
@@ -48,7 +48,7 @@
     <div class="footer">
         <a href="#default" class="logo">MasterMind Poultry Farming</a>
         <div class="footerright">
-          <a href="index-h.html">Home</a>
+          <a href="home.html">Home</a>
           <a class="active" href="about-us.html">About Us</a>
           <a href="breeds.html">Breeds and Rearing</a>
           <a href="index.html">Marketing Advice</a>
