--- a/breeds.html
+++ b/breeds.html
@@ -12,7 +12,7 @@
     <div class="header">
         <a href="#default" class="logo">MasterMind Poultry Farming</a>
         <div class="headerright">
-          <a href="index-h.html">Home</a>
+          <a href="home.html">Home</a>
           <a href="about-us.html">About Us</a>
           <a class="active"href="breeds.html">Breeds and Rearing</a>
           <a href="index.html">Marketing Advice</a>
@@ -67,7 +67,7 @@
    <div class="footer">
     <a href="#default" class="logo">MasterMind Poultry Farming</a>
     <div class="footerright">
-      <a href="index-h.html">Home</a>
+      <a href="home.html">Home</a>
       <a href="about-us.html">About Us</a>
       <a class="active" href="breeds.html">Breeds and Rearing</a>
       <a href="index.html">Marketing Advice</a>
